--- a/DOE/Readme.html
+++ b/DOE/Readme.html
@@ -1,7 +1,5 @@
-<h3>
-Statement of Problem</h3>
+Statement of Problem
 
-<body>
 Dataset: compost.dat Source: P.D. Schloss, B. Chaves, L.P. Walker (2000). "The Use of the Analysis of Variance to Assess the Influence of Mixing During Composting," Process Biochemistry, Vol. 35, pp. 675-684.
 
 Description Results of experiments to measure temperatures in compost reactors under 4 mixing conditions (Static, every 24hr, 96hr, 192hr).
@@ -14,4 +12,3 @@ Experiment(Condition) - 16
 Trial (Experiment)- 24
 Temperature - 28-32
 http://www.stat.ufl.edu/~winner/data/compost.dat, http://www.stat.ufl.edu/~winner/data/compost.txt
-</body>
